--- a/css_index_6.css
+++ b/css_index_6.css
@@ -1,4 +1,4 @@
-<!-- source: https://youtu.be/5fb2aPlgoys -->
+/* source: https://youtu.be/5fb2aPlgoys */
 /* Keep the browser theme black */
 body li button {
     margin: 10px;
